--- a/TCPMon/TCPMon.csproj
+++ b/TCPMon/TCPMon.csproj
@@ -53,9 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blaze\ByteIteratorValue.cs" />
     <Compile Include="Blaze\ConnectionValue.cs" />
     <Compile Include="Blaze\Library.cs" />
     <Compile Include="Blaze\ModuleValue.cs" />
+    <Compile Include="Blaze\PacketValue.cs" />
     <Compile Include="Blaze\Utils.cs" />
     <Compile Include="ConnectionControl.cs">
       <SubType>UserControl</SubType>
