Add icons to script editor and save button

--- a/TCPMon/TCPMon.csproj
+++ b/TCPMon/TCPMon.csproj
@@ -206,5 +206,17 @@
   <ItemGroup>
     <None Include="Resources\blaze_file.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\new_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\build_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\blaze_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
