--- a/TCPMon/App.config
+++ b/TCPMon/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TCPMon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
+    <userSettings>
+        <TCPMon.Properties.Settings>
+            <setting name="BlazePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BlazeDebug" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BlazeSimplify" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ConsoleByteInfo" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </TCPMon.Properties.Settings>
+    </userSettings>
 </configuration>
