--- a/TCPMon/TCPMon.csproj
+++ b/TCPMon/TCPMon.csproj
@@ -123,6 +123,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchemaTester.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SchemaTester.Designer.cs">
+      <DependentUpon>SchemaTester.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScriptEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,6 +175,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SchemaTester.resx">
+      <DependentUpon>SchemaTester.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScriptEditor.resx">
       <DependentUpon>ScriptEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -244,6 +253,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="monitor_black.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BinarySchema\BinarySchema.csproj">
+      <Project>{8bc02cdf-25e6-4143-a7bf-cd458d4e7b46}</Project>
+      <Name>BinarySchema</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
