Work on schema Add temporary form for testing the schema decoder

--- a/BinarySchema/BinarySchema.csproj
+++ b/BinarySchema/BinarySchema.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Decoder\DecodedValue.cs" />
     <Compile Include="Decoder\Decoder.cs" />
+    <Compile Include="Decoder\SchemaObject.cs" />
     <Compile Include="Lexer\Lexer.cs" />
     <Compile Include="Lexer\Token.cs" />
     <Compile Include="Parser\Member.cs" />
