--- a/TCPMon/TCPMon.csproj
+++ b/TCPMon/TCPMon.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Blaze\ByteIteratorValue.cs" />
     <Compile Include="Blaze\ConnectionValue.cs" />
     <Compile Include="Blaze\Library.cs" />
@@ -149,6 +155,9 @@
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="TreeSchema.cs" />
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConnectionControl.resx">
       <DependentUpon>ConnectionControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -255,6 +264,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="monitor_black.ico" />
+    <None Include="Resources\monitor_black.png" />
     <None Include="Resources\binary.png" />
   </ItemGroup>
   <ItemGroup>
