--- a/TCPMon/TCPMon.csproj
+++ b/TCPMon/TCPMon.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Blaze\ConnectionValue.cs" />
     <Compile Include="Blaze\Library.cs" />
     <Compile Include="Blaze\ModuleValue.cs" />
+    <Compile Include="Blaze\PacketBuilderValue.cs" />
     <Compile Include="Blaze\PacketValue.cs" />
     <Compile Include="Blaze\SchemaValue.cs" />
     <Compile Include="Blaze\Utils.cs" />
